tests/invalid/parser/unexpected_token.err.out
tests/invalid/parser/unexpected_token.err.ri:1:12: error: expected `;`, but found token `]`
      | 
    1 | fn main() { ] abc
      |            ^     
error: could not compile `unexpected_token` module, aborting due to previous error